syntax = "proto2";

package common;

message Empty {
}

message TaskSecret {
  // task = pod. Assume only the task itself know its pod id.
  optional string task_name = 1;
  optional string task_id = 2;
}

message BasicConf {
  required string controller_identifier = 1;
  required string identifier = 2;
  required string device_config_path = 4;

  // Assuming only one parameter - the device pb config
  required string service_cmd = 5;
  repeated string service_argv = 6;

  optional string control_service_port = 7;
  optional bool access_control = 8 [default=false];
}

message BasicMutableState {
  enum Mode {
    // Turn off the driver
    OFF = 0;
    // Saving to Local
    LOCAL_SAVING = 1;
    // Sharing to the BATs node for the other node access
    SHARING = 2;
    // Streaming to server
    REMOTE_STREAMING = 3;
  };
  required Mode mode = 1 [ default = LOCAL_SAVING ];
}
